# gw250114-141hz-analysis

./: .ai-instructions.md  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .qcal_baliza  .qcal_beacon  .repo-map.json  .repo-metadata.yml  .zenodo.json  404.html  =0.7.0  ACTO_III_README.md  ADVANCED_VALIDATION_SYSTEM.md  AGENTE_AUTONOMO_141HZ.md  AI_ACCESSIBILITY.md  AI_ACCESS_IMPLEMENTATION_SUMMARY.md  AI_AGENT_IMPLEMENTATION_SUMMARY.md  AI_QUICK_REFERENCE.md  AI_WORKFLOW_COLLABORATOR.md  ANALISIS_BAYESIANO_MULTIEVENTO.md  ANALISIS_MULTIEVENTO_SNR.md  ARCHITECTURE_UPDATE.md  AUTOMATED_COLLABORATORS.md  AUTOMATION_SUMMARY.md  BADGE_FIX_SUMMARY.md  BADGE_STATUS_FIX_IMPLEMENTATION.md  BEFORE_AFTER_COMPARISON.md  BEFORE_AFTER_PASO1.md  BENCHMARKING.md  CHANGELOG.md  CHANGES.md  CITATION.cff  CITATION_QCAL.cff  CI_CD_IMPLEMENTATION.md  CODECOV_AI_GUIDE.md  CODE_OF_CONDUCT.md  COLLABORATORS.md  COMPLETION_SUMMARY.md  COMPLEX_WORKFLOWS_IMPLEMENTATION.md  (+332 more)
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.well-known/: ai-plugin.json
BADGES/: index.html
COHERENCIA_ESCALAS_WORKFLOW/: index.html
COMPUTATIONAL_OPTIMIZATION/: index.html
CORRECCION_ALPHA_PSI/: index.html
Core/: lakefile.lean
Documentation/: ARCHITECTURE.md
ECUACION_ORIGEN_VIBRACIONAL/: index.html
EVIDENCIA_CONCLUYENTE/: index.html
FORMATOS_SALIDA/: index.html
GEOMETRIA_UNIFICADA/: index.html
GUIA_RAPIDA_EOV/: index.html
GW200129_ANALYSIS_README/: index.html
GW200129_SNR_ANALYSIS/: index.html
KAGRA_ANALYSIS/: index.html
KAGRA_O4_WAITLIST/: index.html
PNP_ANTI_BARRIERS/: index.html
PREDICCION_GW250114_KAGRA_O4_IMPLEMENTATION/: index.html
PROTOCOLOS_EXPERIMENTALES/: index.html
QCAL-LLM/: .gitignore  .gitkeep  Dockerfile  IMPLEMENTATION_SUMMARY.md  MANIFESTO.md  Makefile  QCALLLMCore.py  QUICKSTART.md  README.md  TWITTER_THREAD.md  benchmark_results.json  evaluate_manifesto.py  modulation_traces.py  psi_tuning_loop.py  requirements.txt
QCAL_LLM_CORE_README/: index.html
QUICKSTART_FRECUENCIA_PRIMA/: index.html
QUICK_FIX_SNR/: index.html
app/: globals.css  (+2 more)
(+687 files in other folders)
