[tool.poetry]
name = "gw-141hz-analysis"
version = "1.0.0"
description = "Análisis de ondas gravitacionales con frecuencia fundamental f₀ = 141.7001 Hz"
authors = ["José Manuel Mota Burruezo <jmmb@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
gwpy = ">=3.0.0"
gwosc = ">=0.7.0"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
matplotlib = ">=3.5.0"
astropy = ">=5.0"
h5py = ">=3.7.0"
jupyter = ">=1.0.0"
python-dotenv = ">=1.0.0"
mpmath = ">=1.3.0"
sympy = ">=1.12"
pandas = ">=1.3.0"
pyyaml = ">=6.0"
flask = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
flake8 = ">=6.0.0"
black = ">=23.0.0"
mypy = ">=1.0.0"
isort = ">=5.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=1.3.0"

[tool.poetry.scripts]
qcal = "bin.qcal:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | build
  | dist
  | data
  | results
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "data",
    "results",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
